# ML-Benchmarks

./: README.md
MLP/c++/: CMakeLists.txt  README.md  mlp.cpp  mlp.h
MLP/fortran/: README.md  mlp.f90
MLP/go/: README.md  mlp.go
MLP/python/: mlp.py  test.py
MLP/pytorch/: mlp.py  requirements.txt  test.py
MLP/rust/: Cargo.toml  README.md
MLP/rust/src/: main.rs  mlp.rs
data/: load_datasets.py
