[package]
name = "mlp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.14.0"
ndarray-rand = "0.13.0"
rand = "0.8"
rand_distr="0.4"
rustc-serialize = { version = "0.3.20", optional = true }